[project]
name = "ft-datasets-statistic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "gradio>=6.0.1",
    "matplotlib>=3.10.7",
    "modelscope>=1.32.0",
    "scipy>=1.16.3",
    "transformers>=4.57.3",
]
